# clangd-wrap

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs  watcher.rs
src/clangd/: mod.rs  process.rs  restart.rs
src/config/: clangd_yaml.rs  mod.rs  project.rs  wrapper_yaml.rs
src/lsp/: framing.rs  mod.rs  proxy.rs  session.rs
src/tasks/: mod.rs
